Archive2/2c/94ee019596f234/output
main.cpp: In function 'T processVector(const std::vector<T>&)':
main.cpp:6:9: error: need 'typename' before 'std::vector<T>::const_iterator' because 'std::vector<T>' is a dependent scope
     for(std::vector<T>::const_iterator it=input.begin();it!=input.end();it++){
         ^
main.cpp:6:40: error: expected ';' before 'it'
     for(std::vector<T>::const_iterator it=input.begin();it!=input.end();it++){
                                        ^
main.cpp:6:57: error: 'it' was not declared in this scope
     for(std::vector<T>::const_iterator it=input.begin();it!=input.end();it++){
                                                         ^
